Fixed horizontal scroll on long titles

--- a/static/css/post-list.css
+++ b/static/css/post-list.css
@@ -37,6 +37,7 @@
     font-family: 'Quantico', sans-serif;
     font-size: 46px;
     color: #B21313;
+    word-break: break-word;
 }
 
 .post-pagination {
